Fix overflow issues
This patch fixes issue when translation coming out of box.

--- a/src/content/styles/TranslatePanel.scss
+++ b/src/content/styles/TranslatePanel.scss
@@ -31,11 +31,13 @@
       height: -moz-max-content;
       max-width: 100%;
       max-height: 100%;
-      overflow: auto;
+      overflow-x: hidden;
+      overflow-y: scroll;
 
       p {
         all: initial;
         display: block;
+        position: relative;
         margin: 0;
         font-family: "Segoe UI", "San Francisco", "Ubuntu", "Fira Sans", "Roboto", "Arial",
           "Helvetica", sans-serif !important;
